tests/config_munging_underscores2/config_munging_underscores2.exp
Error: chain.js:19
 19: class B extends A {
           ^ B. Cannot extend
 19: class B extends A {
                     ^ A
  Property `_method1` is incompatible:
           v-------------------
     27:   _method1(): string {
     28:     return "yet another string";
     29:   }
           ^ function. This type is incompatible with
           v-------------------
     10:   _method1(): number {
     11:     return 1;
     12:   }
           ^ function
      The return is incompatible:
         27:   _method1(): string {
                           ^^^^^^ string. This type is incompatible with
         10:   _method1(): number {
                           ^^^^^^ number

Error: chain.js:19
 19: class B extends A {
           ^ B. Cannot extend
 19: class B extends A {
                     ^ A
  Property `_property1` is incompatible:
     20:   _property1: string;
                       ^^^^^^ string. This type is incompatible with
      4:   _property1: number;
                       ^^^^^^ number

Error: chain.js:19
 19: class B extends A {
           ^ B. Cannot extend
 19: class B extends A {
                     ^ A
  Property `_sMethod` is incompatible:
           v--------------------------
     30:   static _sMethod(): number {
     31:     return 23;
     32:   }
           ^ function. This type is incompatible with
           v--------------------------
     13:   static _sMethod(): string {
     14:     return "some string";
     15:   }
           ^ function
      The return is incompatible:
         30:   static _sMethod(): number {
                                  ^^^^^^ number. This type is incompatible with
         13:   static _sMethod(): string {
                                  ^^^^^^ string

Error: chain.js:19
 19: class B extends A {
           ^ B. Cannot extend
 19: class B extends A {
                     ^ A
  Property `_sProperty` is incompatible:
     21:   static _sProperty: string;
                              ^^^^^^ string. This type is incompatible with
      5:   static _sProperty: number;
                              ^^^^^^ number


Found 4 errors
